// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > AND > AND(TRUE(), TRUE(), FALSE()) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > AND > AND(TRUE(), TRUE(), TRUE()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > FALSE() 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > IF > IF(FALSE(), "huge if true", "huge if false") 1`] = `
"
┌───┬─────────────────┐
│   │ A               │
├───┼─────────────────┤
│ 1 │ "huge if false" │
└───┴─────────────────┘
"
`;

exports[`@example tests > IF > IF(TRUE(), "huge if true", "huge if false") 1`] = `
"
┌───┬────────────────┐
│   │ A              │
├───┼────────────────┤
│ 1 │ "huge if true" │
└───┴────────────────┘
"
`;

exports[`@example tests > IF_ERROR > IF_ERROR(123 / 0, 0) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 0 │
└───┴───┘
"
`;

exports[`@example tests > IF_ERROR > IF_ERROR(123 / 1, 0) 1`] = `
"
┌───┬─────┐
│   │ A   │
├───┼─────┤
│ 1 │ 123 │
└───┴─────┘
"
`;

exports[`@example tests > NOT > NOT(FALSE()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > NOT > NOT(TRUE()) 1`] = `
"
┌───┬───────┐
│   │ A     │
├───┼───────┤
│ 1 │ FALSE │
└───┴───────┘
"
`;

exports[`@example tests > OR > OR(TRUE(), TRUE(), FALSE()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > OR > OR(TRUE(), TRUE(), TRUE()) 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;

exports[`@example tests > SWITCH > SWITCH(1, 1, "st", 2, "nd", 3, "rd", "th") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "st" │
└───┴──────┘
"
`;

exports[`@example tests > SWITCH > SWITCH(2, 1, "st", 2, "nd", 3, "rd", "th") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "nd" │
└───┴──────┘
"
`;

exports[`@example tests > SWITCH > SWITCH(3, 1, "st", 2, "nd", 3, "rd", "th") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "rd" │
└───┴──────┘
"
`;

exports[`@example tests > SWITCH > SWITCH(4, 1, "st", 2, "nd", 3, "rd", "th") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "th" │
└───┴──────┘
"
`;

exports[`@example tests > SWITCH > SWITCH(5, 1, "st", 2, "nd", 3, "rd", "th") 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ "th" │
└───┴──────┘
"
`;

exports[`@example tests > TRUE() 1`] = `
"
┌───┬──────┐
│   │ A    │
├───┼──────┤
│ 1 │ TRUE │
└───┴──────┘
"
`;
